--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/carihape?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+server.port=8080
+spring.datasource.url=jdbc:postgresql://localhost:5432/examplejdbc
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.platform=postgresql
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
