--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.password=f68aaf22e9c46367415ca6b771b2b71682730826754c6591903d0
 spring.datasource.platform=postgresql
 
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
